--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #f3f3f3;
 
-  font-synthesis: none;
+  /* font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden; */
 }
 
 a {
@@ -43,12 +43,14 @@ html {
 }
 
 #header {
-  width: 91%;
-  padding: 1% 5%;
+  /* width: 91%; */
+  width: 100%;
+  /* padding: 1% 5%; */
   text-align: center;
   position: absolute;
   transition: 0.6s ease-in-out;
   top: 0;
+  right: 40px;
 }
 
 .title {
@@ -108,6 +110,18 @@ a:hover {
 #portfolio {
   width: 80%;
   padding: 2% 10%;
+  color: #ff416c;
+  font-size: 25px;
+}
+.p-skills{
+  color: #000;
+}
+.flex{
+  display: flex;
+  background-color: #d9d9d9;
+}
+.flex::before {
+  transform: skew(20deg, 2deg);
 }
 #portfolio div h1 {
   font-size: 50px;
@@ -122,156 +136,7 @@ a:hover {
   animation: Gradient 20s ease infinite;
   font-family: "Comfortaa", cursive;
 }
-/* #skills {
-  margin: 4vh 0px !important;
-  padding: 2vh 0px !important;
-}
-#work {
-  margin: 4vh 0px !important;
-  padding: 2vh 0px !important;
-}
-#contact {
-  margin: 4vh 0px !important;
-  padding: 2vh 0px !important;
-}
-#contact form {
-  width: 100%;
-}
-#contact form input {
-  width: 46%;
-  margin: 20px 1%;
-  background: transparent;
-  border: 0px;
-  border-bottom: 2px solid rgba(72, 72, 72, 0.5);
-  padding: 8px 10px;
-  font-family: "Comfortaa", cursive;
-  font-size: 18px;
-  transition: 0.4s ease-in-out;
-  color: #1c1d1f;
-}
-#contact form textarea {
-  width: 96%;
-  margin: 20px 1%;
-  padding: 8px 10px;
-  border: 0px;
-  border-bottom: 2px solid rgba(72, 72, 72, 0.5);
-  padding: 8px 10px;
-  font-family: "Comfortaa", cursive;
-  font-size: 18px;
-  background: transparent;
-  resize: none;
-  transition: 0.4s ease-in-out;
-  color: #1c1d1f;
-}
-#contact form input:focus {
-  outline: none;
-  border-bottom: 2px solid rgb(23, 23, 23);
-}
-#contact form textarea:focus {
-  outline: none;
-  border-bottom: 2px solid rgb(23, 23, 23);
-}
-::placeholder {
-  color: #1c1d1f;
-}
-.btn_one {
-  color: #25262a;
-  padding: 10px 40px;
-  border-radius: 50px;
-  border: 2px solid #fff;
-  font-size: 18px;
-  font-family: "Comfortaa", cursive;
-  font-weight: bold;
-  background: transparent;
-  transition: 0.4s ease-in-out;
-  margin: 30px 10px;
-}
-.btn_one:hover {
-  background: rgb(212, 212, 212);
-  cursor: pointer;
-  color: #000;
-}
-.project div {
-  font-weight: normal;
-}
-.btn_two {
-  color: #000;
-  padding: 10px 40px;
-  border-radius: 50px;
-  border: 2px solid #fff;
-  font-size: 18px;
-  font-family: "Comfortaa", cursive;
-  font-weight: bold;
-  background: #fff;
-  transition: 0.4s ease-in-out;
-  margin: 30px 10px;
-}
-.btn_two:hover {
-  background: transparent;
-  cursor: pointer;
-  color: #fff;
-}
-#details {
-  margin: 6vh 0px;
-}
-.btn_social {
-  font-size: 18px;
-  color: #fff;
-  margin: 40px 20px;
-  padding: 15px 18px;
-  border-radius: 50%;
-  background: #000;
-  transition: 0.4s ease-in-out;
-}
-.btn_social:hover {
-  color: #000;
-  background: #fff;
-  cursor: pointer;
-}
-@media (max-width: 900px) {
-  #header {
-    width: 94%;
-    padding: 15% 3%;
-  }
-  #title {
-    font-size: 30px;
-  }
-  #links {
-    margin: 30px 0px;
-  }
-  #links a {
-    margin: 0px;
-  }
-  #middle {
-    width: 100%;
-    border-radius: 0px;
-    height: 80vh;
-    background-size: cover;
-  }
-  #tagline {
-    width: 90%;
-    font-size: 30px;
-  }
-  .btn_one {
-    font-size: 14px;
-    padding: 8px 20px;
-  }
-  .btn_two {
-    font-size: 14px;
-    padding: 8px 20px;
-  }
-  #contact form input {
-    width: 92%;
-  }
-  #contact form textarea {
-    width: 92%;
-  }
-  .btn_social {
-    font-size: 14px;
-    margin: 10px;
-    padding: 10px 11px;
-  }
-} */
+
 #footer {
   width: 100%;
   padding: 10vh 0px;
@@ -341,9 +206,6 @@ button:focus {
     background-position: 0% 50%;
   }
 }
-p {
-  font-size: 1.2rem;
-}
 .skills-block {
   margin-bottom: 20px;
 }
@@ -356,6 +218,7 @@ p {
 .skills-list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
 }
