--- a/src/product.css
+++ b/src/product.css
@@ -24,8 +24,7 @@
 }
 
 .card {
-  /* width: 450px;
-  height: 350px; */
+  width: 400px;
   aspect-ratio: 2/3;
   background: var(--background);
   color: var(--textColor);
@@ -65,10 +64,17 @@
   line-height: 1.5em;
   min-height: 6em;
 }
+.card > .descriptionMain {
+  line-height: 1.2em;
+  min-height: 3em;
+  font-size: 1rem;
+  color: #3c4043;
+}
 
 .card > .icon {
   font-size: 3em;
   margin-bottom: 0.2em;
+  text-align: center;
 }
 .image {
   width: 300px;
