--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,6 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #f3f3f3;
 
-  /* font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  overflow-x: hidden; */
 }
 
 a {
@@ -43,9 +37,7 @@ html {
 }
 
 #header {
-  /* width: 91%; */
   width: 100%;
-  /* padding: 1% 5%; */
   text-align: center;
   position: absolute;
   transition: 0.6s ease-in-out;
@@ -212,7 +204,8 @@ button:focus {
 
 .skills-block h2 {
   font-size: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 2px;
+  margin-top: 10px;
 }
 
 .skills-list {
@@ -224,12 +217,12 @@ button:focus {
 }
 
 .skills-list li {
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   font-size: 19px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 40px;
+  gap: 10px;
   margin-left: 30px;
   color: #2a2d34;
 }
@@ -246,4 +239,36 @@ button:focus {
 }
 
 
-/* скачано */
+@media (max-width: 768px) {
+  #middle{
+    width: 100%;
+    height: 80vh;
+    background: linear-gradient(0deg, rgba(42, 42, 42, 0.773), rgba(37, 37, 37, 0)),
+      url("./assets/1.jpg");
+    background-size: 320% auto;
+    background-repeat: no-repeat;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    transition: 1s ease-in-out;
+    padding-top: 20vh;
+  }
+  #tagline {
+    position: relative;
+    font-size: 2.3rem;
+  }
+  .links {
+display: none;
+}
+}
+
+/* Стилі для планшетів */
+@media (min-width: 769px) and (max-width: 1024px) {
+  /* Ваші стилі тут */
+}
+
+/* Стилі для десктопних пристроїв */
+@media (min-width: 1025px) {
+  /* Ваші стилі тут */
+}
