--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #f3f3f3;
   overflow-x: hidden;
+  height: 100vh;
 }
 
 a {
@@ -23,7 +23,6 @@ a {
   font-size: 4.5rem;
   margin-bottom: 50px;
 }
-/* скачано */
 
 body,
 html {
@@ -31,7 +30,7 @@ html {
   margin: 0px;
   font-family: "Comfortaa", cursive;
   font-weight: bold;
-  color: #1c1d1f;
+  color: #252c3b;
   background: rgb(236, 237, 239);
   scroll-behavior: smooth;
 }
@@ -64,7 +63,7 @@ html {
 }
 .links {
   margin: 0px 40px;
-  color: #1c1d1f;
+  color: #252c3b;
   font-size: 1.9rem;
 }
 .btn_one a {
@@ -140,20 +139,7 @@ a:hover {
   text-align: center;
   font-weight: bold;
 }
-#footer a {
-  font-size: 18px;
-  background-image: linear-gradient(to left, #ff416c 0%, #ff4b2b 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 500% 500% !important;
-  -webkit-animation: Gradient 20s ease infinite;
-  -moz-animation: Gradient 20s ease infinite;
-  -o-animation: Gradient 20s ease infinite;
-  animation: Gradient 20s ease infinite;
-  font-family: "Comfortaa", cursive;
-  text-decoration: none;
-}
+
 button:focus {
   outline: none;
 }
@@ -230,7 +216,6 @@ button:focus {
   align-items: center;
   flex-direction: column;
   gap: 10px;
-  /* margin-left: 30px; */
   margin: 20px;
   color: #2a2d34;
 }
@@ -278,12 +263,10 @@ button:focus {
   }
 }
 
-/* Стилі для планшетів */
-@media (min-width: 769px) and (max-width: 1024px) {
-  /* Ваші стилі тут */
+/* @media (min-width: 769px) and (max-width: 1024px) {
+
 }
 
-/* Стилі для десктопних пристроїв */
 @media (min-width: 1025px) {
-  /* Ваші стилі тут */
-}
+
+} */
