--- a/src/product.css
+++ b/src/product.css
@@ -26,12 +26,12 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 }
 .card {
   position: relative;
   width: 400px;
-  height: 600px;
+  height: 540px;
   background: var(--background);
   color: var(--textColor);
   border: 1px solid var(--cardBorder);
@@ -58,26 +58,34 @@ p{
   border: 2px solid var(--cardBorderActive);
   box-shadow: 4px 4px 0 var(--cardShadowActive);
 }
-/* .card > .title {
-  margin-top: 1.9em;
-  font-weight: bold;
-} */
 
 .card > .description {
   line-height: 1.9em;
+  font-size: 1.1rem;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 .card > .descriptionMain {
-  line-height: 1.5em;
+  line-height: 2.5em;
   font-size: 1.2rem;
   color: #3c4043;
+}
+.card > .title-card {
+  font-size: 30px;
+  color: #ff416c;
 }
 
 .card > .icon {
   font-size: 3em;
   text-align: center;
 }
+
+.iconStek{
+  width: 40px;
+  padding: 5px;
+}
+
 .image {
-  width: 300px;
+  width: 380px;
 }
 .rating {
   position: absolute;
@@ -88,7 +96,6 @@ p{
   margin-bottom: 0.8em;
   color: var(--ratingColor);
   font-weight: bold;
-  /* position: relative; */
   width: max-content;
 }
 .link {
@@ -97,12 +104,7 @@ p{
   left: 10px;
   margin: auto;
 }
-/* .card > .link {
-  margin-bottom: 1rem;
-  color: var(--linkColor);
-  font-size: 0.8em;
-  font-weight: 600;
-} */
+
 @media (max-width: 768px) {
   .card {
     max-width: 200px;
