--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ html {
 }
 a:hover {
   border-bottom: 2px solid #fff;
+  color: white;
 }
 #middle {
   width: 100%;
@@ -227,8 +228,8 @@ button:focus {
   font-size: 24px;
 }
 .skills-list img {
-  width: 90px;
-  height: 90px;
+  width: 80px;
+  height: 80px;
 }
 
 @media (max-width: 768px) {
