--- a/src/index.css
+++ b/src/index.css
@@ -18,17 +18,37 @@ a {
   font-size: 3.8rem;
   letter-spacing: 4px;
 }
-.categoryH1{
+.categoryH1 {
   position: relative;
   opacity: 0;
   transition: 1s ease-in;
-  padding: 10px;
+  padding: 0px;
   color: #ff416c;
-  font-size: 50px;
+  font-size: 60px;
+  transform: translateX(-200px);
+  left: -140px;
+  padding-left: 200px;
+  position: relative;
+  width: 258px;
+  background: whitesmoke;
+  border-radius: 0 50px 50px 0;
+  box-shadow: 10px 10px 25px -15px rgba(0,0,0,0.75);
 }
 
-.h1animation{
-  transform: translateX(70px);
+.categoryH1:before {
+  content: "";
+  position: absolute;
+  top: -99px;
+  left: -50.1px;
+  width: 0;
+  height: 0;
+  border-bottom: 100px solid whitesmoke;
+  border-right: 15vw solid transparent;
+}
+
+
+.h1animation {
+  transform: translateX(0px);
   opacity: 1;
 }
 
@@ -116,29 +136,34 @@ a:hover {
   width: 70%;
   position: absolute;
   left: 0;
+  animation: flicker 12.5s ease-in-out infinite;
 }
-.animate-class{
-  animation-name: myAnimation;
-  animation-duration: 2s;
-}
-
-@keyframes myAnimation {
+@keyframes flicker {
   0% {
-    transform: translateY(-50px);
-    opacity: 0;
+    text-shadow: -13px 4px 5px rgba(0,0,0,0.6);
+  }
+  50% {
+    text-shadow: 13px 4px 5px rgba(0,0,0,0.6);
   }
   100% {
-    transform: translateY(0);
-    opacity: 1;
+    text-shadow: -13px 4px 5px rgba(0,0,0,0.6);
   }
 }
-
 #portfolio {
   width: 100%;
   padding: 4% 0%;
   color: #ff416c;
   font-size: 25px;
   margin-left: 10px;
+}
+.content{
+  background: linear-gradient(to right, #ced8ff, #ffdede, #fff2d9);
+  background-size: 100%;
+  transition: 2s ease-in-out;
+}
+.contentAdd{
+  background: linear-gradient(to right, #ced8ff, #ffdede, #ffeac3);
+  background-size: 350%;
 }
 .p-skills {
   color: #000;
@@ -162,13 +187,6 @@ a:hover {
   -o-animation: Gradient 20s ease infinite;
   animation: Gradient 20s ease infinite;
   font-family: "Comfortaa", cursive;
-}
-
-.footer {
-  width: 40px;
-  padding: 10px;
-  text-align: center;
-  font-weight: bold;
 }
 
 button:focus {
@@ -262,16 +280,33 @@ button:focus {
   height: 60px;
 }
 
+.footer {
+  width: 100%;
+  height: 300px;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+  background-color: #9f9f9f;
+  display: flex;
+}
+.footer > a{
+  text-decoration: none;
+}
+li{
+  list-style-type: none;
+}
+
+
 @media (max-width: 768px) {
   #middle {
     width: 100vw;
     height: 100vh;
     background: linear-gradient(
-        0deg,
-        rgba(69, 55, 50, 0.773),
-        rgba(33, 24, 24, 0)
-      );
-      background-size: 200%;
+      0deg,
+      rgba(69, 55, 50, 0.773),
+      rgba(33, 24, 24, 0)
+    );
+    background-size: 200%;
     color: white;
     display: flex;
     justify-content: center;
@@ -301,4 +336,3 @@ button:focus {
 @media (min-width: 1025px) {
 
 } */
-
