--- a/src/index.css
+++ b/src/index.css
@@ -278,7 +278,7 @@ button:focus {
   height: 60px;
 }
 
-.footer {
+/* .footer {
   width: 100%;
   height: 300px;
   padding: 10px;
@@ -289,7 +289,7 @@ button:focus {
 }
 .footer > a{
   text-decoration: none;
-}
+} */
 li{
   list-style-type: none;
 }
