--- a/src/footer.css
+++ b/src/footer.css
@@ -1,85 +1,45 @@
 .footer {
   width: 100%;
-  height: 300px;
-  padding: 10px;
+  height: 150px;
   text-align: center;
   font-weight: bold;
-  background-color: #9f9f9f;
+  background-color: #262b2b;
   display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  color: whitesmoke;
 }
-.footer > a {
+.copyright-text > a {
   text-decoration: none;
-}
-.site-footer {
-  background-color: #26272b;
-  padding: 45px 0 20px;
-  font-size: 15px;
-  line-height: 24px;
-  color: #737373;
+  color: whitesmoke;
+  margin-left: 10px;
+  font-weight: 900;
+  font-size: 19px;
 }
 
-.site-footer h6 {
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-  margin-top: 5px;
+.copyright-text {
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  color: silver;
+}
+h3{
+  font-weight: 900;
   letter-spacing: 2px;
 }
-.site-footer a {
-  color: #737373;
+.social-icons > p {
+  font-size: 18px;
 }
-.site-footer a:hover {
-  color: #3366cc;
-  text-decoration: none;
-}
-.footer-links {
-  padding-left: 0;
-  list-style: none;
-}
-.footer-links li {
-  display: block;
-}
-.footer-links a {
-  color: #737373;
-}
-.footer-links a:active,
-.footer-links a:focus,
-.footer-links a:hover {
-  color: #3366cc;
-  text-decoration: none;
-}
-.footer-links.inline li {
-  display: inline-block;
-}
-.site-footer .social-icons {
-  text-align: right;
-}
-.site-footer .social-icons a {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  margin-left: 6px;
-  margin-right: 0;
-  border-radius: 100%;
-  background-color: #33353d;
-}
-.copyright-text {
-  margin: 0;
-}
-
-@media (max-width: 767px) {
-  .site-footer {
-    padding-bottom: 0;
-  }
-  .site-footer .copyright-text,
-  .site-footer .social-icons {
-    text-align: center;
-  }
+.img-logo{
+transform: translate(150px, 30px);
+  width: 100px;
+  background: whitesmoke;
+  border-radius: 50%;
 }
 .social-icons {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  transform: translateY(-10px);
 }
 .social-icons li {
   display: inline-block;
@@ -90,41 +50,36 @@
   text-transform: uppercase;
   color: #96a2b2;
   font-weight: 700;
-  font-size: 13px;
+  font-size: 20px;
 }
 .social-icons a {
   background-color: #eceeef;
   color: #818a91;
-  font-size: 16px;
+  font-size: 27px;
   display: inline-block;
-  line-height: 44px;
-  width: 44px;
-  height: 44px;
+  line-height: 54px;
+  width: 54px;
+  height: 54px;
   text-align: center;
-  margin-right: 8px;
+  margin-right: 12px;
   border-radius: 100%;
-  -webkit-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
 .social-icons a:active,
 .social-icons a:focus,
 .social-icons a:hover {
   color: #fff;
-  background-color: #29aafe;
+  border-bottom: none;
 }
 
-.social-icons a.facebook:hover {
+a.facebook:hover {
   background-color: #3b5998;
 }
-.social-icons a.twitter:hover {
+.social-icons a.telegram:hover {
   background-color: #00aced;
 }
 .social-icons a.linkedin:hover {
   background-color: #007bb6;
-}
-.social-icons a.dribbble:hover {
-  background-color: #ea4c89;
 }
 @media (max-width: 767px) {
   .social-icons li.title {
