--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ a {
   font-weight: 500;
   text-decoration: none;
   transition: 1.5s ease-in-out;
+  background: none;
 }
 .h1 {
   font-size: 3.8rem;
@@ -253,7 +254,6 @@ button:focus {
   justify-content: center;
   padding: 0;
   margin: 0;
-  margin-right: 10px;
 }
 
 .skills-list li {
@@ -263,7 +263,7 @@ button:focus {
   align-items: center;
   flex-direction: column;
   gap: 10px;
-  margin: 20px;
+  margin: 10px;
   color: #2a2d34;
 }
 
@@ -274,8 +274,8 @@ button:focus {
   font-size: 24px;
 }
 .skills-list img {
-  width: 60px;
-  height: 60px;
+  width: 65px;
+  height: 65px;
 }
 
 /* .footer {
