--- a/src/product.css
+++ b/src/product.css
@@ -29,7 +29,7 @@
   margin-bottom: 0px;
 }
 .card {
-  position: relative;
+  /* position: relative; */
   width: 400px;
   height: 590px;
   background: var(--background);
@@ -50,10 +50,10 @@ p {
   margin-right: 10px;
   text-align: center;
 }
-.card:hover {
+/* .card:hover {
   transform: translate(-2px, -4px);
   box-shadow: 16px 16px 0 var(--cardShadowHover);
-}
+} */
 
 .card-pading > .description {
   line-height: 1.9em;
@@ -173,3 +173,50 @@ p {
 .next {
   right: 10px;
 }
+/* paralax */
+.card > div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.front {
+  background-color: #f1f1f1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back {
+  background-color: #e2e2e2;
+  transform: rotateY(180deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flip-vertical-fwd:hover {
+  -webkit-animation: flip-vertical-fwd 2s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+          animation: flip-vertical-fwd 2s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+@-webkit-keyframes flip-vertical-fwd {
+  0% {
+      transform: rotateY(0);
+  }
+  100% {
+      transform: rotateY(180deg);
+  }
+}
+
+@keyframes flip-vertical-fwd {
+  0% {
+      transform: rotateY(0);
+  }
+  100% {
+      transform: rotateY(180deg);
+  }
+}
+
+
