--- a/src/product.css
+++ b/src/product.css
@@ -29,7 +29,7 @@
   margin-bottom: 0px;
 }
 .card {
-  /* position: relative; */
+  position: relative;
   width: 400px;
   height: 590px;
   background: var(--background);
@@ -91,12 +91,23 @@ p {
   position: absolute;
   bottom: 30px;
 }
+.rating::before {
+  content: "star";
+  bottom: 30px;
+  font-weight: 100;
+  font-family: Arial;
+  font-size: 1rem;
+  padding-right: 5px;
+}
 .card-pading > .rating {
   font-size: 1.5em;
   margin-bottom: 0.8em;
   color: var(--ratingColor);
   font-weight: bold;
   width: max-content;
+  position: absolute;
+  bottom: -10px;
+  right: 10px;
 }
 .card-pading > a:hover {
   color: #202125;
@@ -173,50 +184,27 @@ p {
 .next {
   right: 10px;
 }
-/* paralax */
-.card > div {
+/* accordion */
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
   width: 100%;
-  height: 100%;
-  position: absolute;
-  backface-visibility: hidden;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
 }
 
-.front {
-  background-color: #f1f1f1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.active, .accordion:hover {
+  background-color: #ccc;
 }
 
-.back {
-  background-color: #e2e2e2;
-  transform: rotateY(180deg);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
 }
-
-.flip-vertical-fwd:hover {
-  -webkit-animation: flip-vertical-fwd 2s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
-          animation: flip-vertical-fwd 2s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
-}
-
-@-webkit-keyframes flip-vertical-fwd {
-  0% {
-      transform: rotateY(0);
-  }
-  100% {
-      transform: rotateY(180deg);
-  }
-}
-
-@keyframes flip-vertical-fwd {
-  0% {
-      transform: rotateY(0);
-  }
-  100% {
-      transform: rotateY(180deg);
-  }
-}
-
 
