--- a/src/product.css
+++ b/src/product.css
@@ -134,32 +134,6 @@ p {
   box-shadow: 4px 4px 0 var(--cardShadowActive);
 }
 
-@media (max-width: 768px) {
-  .card {
-    max-width: 200px;
-    height: 500px;
-    background: var(--background);
-    color: var(--textColor);
-    border: 1px solid var(--cardBorder);
-    padding: 25px;
-    box-shadow: 8px 8px 0 var(--cardShadow);
-    transition: box-shadow 0.5s, transform 0.5s;
-    border-radius: 8px;
-    display: inline-block;
-    margin-bottom: 40px;
-  }
-  .card > .icon {
-    font-size: 3em;
-    margin-bottom: 0.2em;
-    text-align: center;
-  }
-  .image {
-    width: 200px;
-  }
-  #portfolio div h1 {
-    margin-left: 20px;
-  }
-}
 /* Slideshow */
 .slideshow-container {
   position: relative;
@@ -203,11 +177,56 @@ p {
   text-align: left;
   border: none;
   outline: none;
-  transition: 1.4s;
+  transition: 1.4s ease-in-out;
   transform: translateY(-20px);
 }
 
 .accordion:hover {
   background-color: #ccc;
+}
+
+
+@media (max-width: 768px) {
+  .card {
+    /* max-width: 340px; */
+    width: calc(100% - 80px);
+    background: var(--background);
+    color: var(--textColor);
+    border: 1px solid var(--cardBorder);
+    padding: 0px;
+    box-shadow: 8px 8px 0 var(--cardShadow);
+    transition: box-shadow 0.5s, transform 0.5s;
+    border-radius: 8px;
+    display: inline-block;
+    margin-bottom: 20px;
+  }
+  .card-pading {
+    padding: 10px;
+  }
+  .card > .icon {
+    font-size: 3em;
+    margin-bottom: 0.2em;
+    text-align: center;
+  }
+  .card-pading > .description {
+    line-height: 1.9em;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    height: 80px;
+    margin-bottom: 70px;
+    margin-top: 0;
+  }
+  .accordion {
+    display: none;
+  }
+  .card-pading > .rating {
+    display: none;
+  }
+  .image {
+    width: 100%;
+  }
+  #portfolio div h1 {
+    margin-left: 20px;
+  }
+
 }
 
