--- a/src/stayProps/components/raiting.css
+++ b/src/stayProps/components/raiting.css
@@ -13,6 +13,7 @@
   color: black;
   font-weight: 800;
   margin-right: 11px;
+  font-size: 1.9rem;
 }
 .row{
   color: #e44167;
@@ -82,11 +83,14 @@
 .bar-2 {width: 85%; height: 18px; background-color: #ff9800; transition: 1s ease-in-out;}
 .bar-1 {width: 87%; height: 18px; background-color: #f44336; transition: 1s ease-in-out;}
 
-@media (max-width: 400px) {
+@media (max-width: 767px) {
   .side, .middle {
     width: 100%;
   }
   .right {
     display: none;
+  }
+  .fa-star:before {
+    font-size: 35px;
   }
 }
