--- a/src/footer.css
+++ b/src/footer.css
@@ -1,6 +1,5 @@
 .footer {
   width: 100%;
-  height: 150px;
   text-align: center;
   font-weight: bold;
   background-color: #262b2b;
@@ -19,18 +18,18 @@
 
 .copyright-text {
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   color: silver;
 }
-h3{
+h3 {
   font-weight: 900;
   letter-spacing: 2px;
 }
 .social-icons > p {
   font-size: 18px;
 }
-.img-logo{
-transform: translate(150px, 30px);
+.img-logo {
+  transform: translate(150px, 30px);
   width: 100px;
   background: whitesmoke;
   border-radius: 50%;
@@ -88,14 +87,30 @@ a.facebook:hover {
     font-weight: 600;
   }
   .footer {
-    height: 100%;
+    flex-direction: column;
+    align-items: stretch;
   }
   .social-icons li {
-    margin-bottom: 8px;
+    margin: 5px;
+    margin-top: 20px;
   }
-  .row{
+  .social-icons > p {
+    margin-top: 30px;
+  }
+  .copyright-text {
+    width: 150px;
+    transform: translate(10px, 75px);
+  }
+  .img-logo {
     position: relative;
-    bottom: -20px;
-    font-size: 1rem;
+    bottom: 40px;
+    transform: translate(200px, 0px);
+  }
+  p {
+    font-size: 1.2rem;
+  }
+  i {
+    font-size: 1.4rem;
+    padding: 5px;
   }
 }
