--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a {
   background: none;
 }
 .h1 {
-  font-size: 3.8rem;
+  font-size: 4.5rem;
   letter-spacing: 4px;
 }
 .categoryH1 {
@@ -293,14 +293,7 @@ li{
   left: 20px;
 }
 
-.bar1, .bar2, .bar3 {
-  width: 55px;
-  height: 10px;
-  background-color: #333;
-  margin: 6px 0;
-  transition: 0.4s;
-  display: block;
-}
+
 
 .change .bar1 {
   transform: translate(0, 16px) rotate(-45deg);
@@ -320,7 +313,7 @@ li{
   overflow: hidden;
 }
 .mobile-container.show {
-  width: 130%;
+  width: 165%;
   display: block;
   background-color: #333;
   border-radius: 0 35px 35px 0;
@@ -350,11 +343,13 @@ li{
     padding-top: 20vh;
   }
   .h1 {
-    transform: translate(-10px, 60px);
+    transform: translate(5px, 60px);
+    font-size: 3.8rem;
   }
   #tagline {
     position: relative;
-    font-size: 2.7rem;
+    font-size: 2.4rem;
+    top: 100px;
   }
   .links {
     display: none;
@@ -367,6 +362,14 @@ li{
   }
   .skills-list {
     margin-right: 15px;
+  }
+  .bar1, .bar2, .bar3 {
+    width: 55px;
+    height: 10px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+    display: block;
   }
 }
 
