--- a/src/footer.css
+++ b/src/footer.css
@@ -38,6 +38,58 @@ h3 {
   opacity: 1;
   transition: transform 0.5s ease-in-out;
 }
+@keyframes bounce-in-right {
+  0% {
+    -webkit-transform: translateX(600px);
+            transform: translateX(600px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateX(68px);
+            transform: translateX(68px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateX(32px);
+            transform: translateX(32px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateX(8px);
+            transform: translateX(8px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
 .social-icons {
   padding-left: 0;
   margin-bottom: 0;
@@ -60,7 +112,7 @@ h3 {
   color: #818a91;
   font-size: 27px;
   display: inline-block;
-  line-height: 52px;
+  line-height: 54px;
   width: 54px;
   height: 54px;
   text-align: center;
@@ -100,6 +152,7 @@ a.facebook:hover {
   .footer {
     flex-direction: column;
     align-items: stretch;
+    font-size: 1.2rem;
   }
   .social-icons li {
     margin: 5px;
@@ -115,9 +168,10 @@ a.facebook:hover {
   .img-logo {
     position: relative;
     top: -50px;
+    left: 40px;
   }
-  p {
-    font-size: 1.2rem;
+  .footer > p {
+    font-size: 1.3rem;
   }
   i {
     font-size: 1.4rem;
