--- a/src/product.css
+++ b/src/product.css
@@ -28,18 +28,23 @@
   flex-wrap: wrap;
   margin-bottom: 40px;
   position: relative;
-  z-index: 1; /* Ensure the content appears above the background */
+  z-index: 10;
 
   /* Adjusted background with 20% opacity */
-
+  /* background:
+    linear-gradient(315deg, transparent 75%, #f7faff33 0) -10px 0,
+    linear-gradient(45deg, transparent 75%, #f0f6ff33 0) -10px 0,
+    linear-gradient(135deg, #dbe9ff33 50%, transparent 0) 0 0,
+    linear-gradient(45deg, #c7cbd233 50%, #b7b7b933 0) 0 0 #27272710;
+  background-size: 20px 20px;
+  background-attachment: fixed; */
 }
 
-/* Pseudo-element to cover the background with opacity */
 .flex::before {
   content: "";
   position: absolute;
   top: 0;
-  left: 0;
+  left: -20%;
   width: 150%;
   height: 100%;
   background:
@@ -47,7 +52,7 @@
     linear-gradient(45deg, transparent 75%, #f0f6ff33 0) -10px 0,
     linear-gradient(135deg, #dbe9ff33 50%, transparent 0) 0 0,
     linear-gradient(45deg, #c7cbd233 50%, #b7b7b933 0) 0 0 #27272710;
-  background-size: 20px 20px;
+  background-size: 25px 25px;
   background-attachment: fixed;
   z-index: -1;
 }
@@ -248,6 +253,9 @@ p {
   #portfolio div h1 {
     margin-left: 20px;
   }
-
+  .flex::before {
+    left: -200%;
+    width: 1000%;
+  }
 }
 
